--- a/src/scss/variable/_color.scss
+++ b/src/scss/variable/_color.scss
@@ -2,6 +2,10 @@
 // Variable: Color
 //----------------------------------------------------
 
+//----------------------------------------------------
+// / Material Color
+//----------------------------------------------------
+
 $red-50: #ffebee !default;
 $red-100: #ffcdd2 !default;
 $red-200: #ef9a9a !default;
@@ -279,7 +283,7 @@ $black: #000000 !default;
 $white: #ffffff !default;
 
 //----------------------------------------------------
-// / Theme
+// / Base
 //----------------------------------------------------
 
 $primary: $cyan-500 !default;
