--- a/src/scss/variable/_font.scss
+++ b/src/scss/variable/_font.scss
@@ -2,6 +2,10 @@
 // Variable: Font
 //----------------------------------------------------
 
+//----------------------------------------------------
+// / Font Family
+//----------------------------------------------------
+
 $font-sans:
 "Hiragino Sans", "Hiragino Kaku Gothic ProN",
 "Noto Sans Japanese",
@@ -22,7 +26,7 @@ Meiryo,
 monospace, serif !default;
 
 //----------------------------------------------------
-// / Pattern
+// / Font Size
 //----------------------------------------------------
 
 $pattern-font-size:(
@@ -34,6 +38,10 @@ $pattern-font-size:(
   xs: 75%,
   xxs: 62.5%
 );
+
+//----------------------------------------------------
+// / Font Weight
+//----------------------------------------------------
 
 $pattern-font-weight:(
   normal: 400,
