--- a/src/scss/variable/_color.scss
+++ b/src/scss/variable/_color.scss
@@ -283,14 +283,8 @@ $black: #000000 !default;
 $white: #ffffff !default;
 
 //----------------------------------------------------
-// / Base
+// / Dark & Light
 //----------------------------------------------------
-
-$primary: $cyan-500 !default;
-$info: $blue-500 !default;
-$success: $green-a700 !default;
-$warning: $orange-600 !default;
-$danger: $red-500 !default;
 
 $dark: $black !default;
 $dark-1: rgba( $black, 0.87 ) !default;
@@ -313,18 +307,6 @@ $light-6: rgba( $white, 0.26 ) !default;
 $light-7: rgba( $white, 0.15 ) !default;
 $light-8: rgba( $white, 0.12 ) !default;
 $light-9: rgba( $white, 0.05 ) !default;
-
-//----------------------------------------------------
-// / Pattern
-//----------------------------------------------------
-
-$pattern-color-theme:(
-  primary: $primary,
-  info: $info,
-  success: $success,
-  warning: $warning,
-  danger: $danger
-);
 
 $pattern-color-dark:(
   dark: $dark,
@@ -350,4 +332,40 @@ $pattern-color-light:(
   light-7: $light-7,
   light-8: $light-8,
   light-9: $light-9
+);
+
+//----------------------------------------------------
+// / Theme
+//----------------------------------------------------
+
+$primary: $cyan-500 !default;
+$info: $blue-500 !default;
+$success: $green-a700 !default;
+$warning: $orange-600 !default;
+$danger: $red-500 !default;
+
+$pattern-color-theme:(
+  primary: $primary,
+  info: $info,
+  success: $success,
+  warning: $warning,
+  danger: $danger
+);
+
+//----------------------------------------------------
+// / Brand
+//----------------------------------------------------
+
+$brand-twitter: #1da1f2 !default;
+$brand-facebook: #3b5998 !default;
+$brand-hatena: #45A3D9 !default;
+$brand-line: #00c300 !default;
+$brand-pocket: #ef4056 !default;
+
+$pattern-color-social:(
+  twitter: $brand-twitter,
+  facebook: $brand-facebook,
+  hatena: $brand-hatena,
+  line: $brand-line,
+  pocket: $brand-pocket
 );
