--- a/src/scss/variable/_breakpoint.scss
+++ b/src/scss/variable/_breakpoint.scss
@@ -22,7 +22,7 @@ $pattern-breakpoint-base:(
   tablet: $screen-width-tablet,
   desktop: $screen-width-desktop,
   wide: $screen-width-wide
-);
+) !default;
 
 $pattern-breakpoint-mediaquery-mobile-first:(
   mobile: $screen-width-mobile,
@@ -30,7 +30,7 @@ $pattern-breakpoint-mediaquery-mobile-first:(
   tablet: "screen and (min-width: " + $screen-width-tablet + ")",
   desktop: "screen and (min-width: " + $screen-width-desktop + ")",
   wide: "screen and (min-width: " + $screen-width-wide + ")"
-);
+) !default;
 
 $pattern-breakpoint-mediaquery-all:(
   mobile: $screen-width-mobile,
@@ -48,4 +48,4 @@ $pattern-breakpoint-mediaquery-all:(
   mobile-desktop: "screen and (max-width: " + ($screen-width-wide - 1px) + ")",
   landscape: "all and (orientation:landscape) and (max-width: " + ($screen-width-desktop - 1px) + ")",
   portrait: "all and (orientation:portrait) and (max-width: " + ($screen-width-desktop - 1px) + ")"
-);
+) !default;
