--- a/src/scss/variable/_font.scss
+++ b/src/scss/variable/_font.scss
@@ -37,7 +37,7 @@ $pattern-font-size:(
   sm: 87.5%,
   xs: 75%,
   xxs: 62.5%
-);
+) !default;
 
 //----------------------------------------------------
 // / Font Weight
@@ -55,4 +55,4 @@ $pattern-font-weight:(
   weight-700: 700,
   weight-800: 800,
   weight-900: 900
-);
+) !default;
