--- a/src/scss/mixin/_mediaquery.scss
+++ b/src/scss/mixin/_mediaquery.scss
@@ -156,7 +156,7 @@
 }
 
 //----------------------------------------------------
-// / Pattern
+// / Media Query - Pattern
 //----------------------------------------------------
 
 @mixin mediaquery-pattern($mediaquery) {
