--- a/src/scss/mixin/_placeholder.scss
+++ b/src/scss/mixin/_placeholder.scss
@@ -3,7 +3,7 @@
 //----------------------------------------------------
 
 //----------------------------------------------------
-// / Browser Pattern
+// / Browser - Pattern
 //----------------------------------------------------
 
 @mixin placeholder {
