--- a/src/scss/variable/_color.scss
+++ b/src/scss/variable/_color.scss
@@ -3,7 +3,7 @@
 //----------------------------------------------------
 
 //----------------------------------------------------
-// / Material Color
+// / Material Design Color
 //----------------------------------------------------
 
 $red-50: #ffebee !default;
@@ -308,6 +308,10 @@ $light-7: rgba( $white, 0.15 ) !default;
 $light-8: rgba( $white, 0.12 ) !default;
 $light-9: rgba( $white, 0.05 ) !default;
 
+//----------------------------------------------------
+// / Dark & Light - Pattern
+//----------------------------------------------------
+
 $pattern-color-dark:(
   dark: $dark,
   dark-1: $dark-1,
@@ -344,6 +348,10 @@ $success: $green-a700 !default;
 $warning: $orange-600 !default;
 $danger: $red-500 !default;
 
+//----------------------------------------------------
+// / Theme - Pattern
+//----------------------------------------------------
+
 $pattern-color-theme:(
   primary: $primary,
   info: $info,
@@ -361,6 +369,10 @@ $brand-facebook: #3b5998 !default;
 $brand-hatena: #45A3D9 !default;
 $brand-line: #00c300 !default;
 $brand-pocket: #ef4056 !default;
+
+//----------------------------------------------------
+// / Brand - Pattern
+//----------------------------------------------------
 
 $pattern-color-social:(
   twitter: $brand-twitter,
