--- a/src/scss/variable/_font.scss
+++ b/src/scss/variable/_font.scss
@@ -26,7 +26,7 @@ Meiryo,
 monospace, serif !default;
 
 //----------------------------------------------------
-// / Font Size
+// / Font Size - Pattern
 //----------------------------------------------------
 
 $pattern-font-size:(
@@ -40,7 +40,7 @@ $pattern-font-size:(
 ) !default;
 
 //----------------------------------------------------
-// / Font Weight
+// / Font Weight - Pattern
 //----------------------------------------------------
 
 $pattern-font-weight:(
