--- a/src/scss/_dashi.scss
+++ b/src/scss/_dashi.scss
@@ -1,5 +1,5 @@
 //----------------------------------------------------
-// Sass Dashi CC0 by Qrac
+// Dashi - SCSS
 //----------------------------------------------------
 
 @import "variable/breakpoint";
