--- a/src/scss/variable/_font.scss
+++ b/src/scss/variable/_font.scss
@@ -6,53 +6,71 @@
 // / Font Family
 //----------------------------------------------------
 
-$font-sans:
-"Hiragino Sans", "Hiragino Kaku Gothic ProN",
-"Noto Sans Japanese",
-Meiryo,
-"Yu Gothic Medium",
-sans-serif !default;
+$font-sans: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Noto Sans Japanese",
+  Meiryo, "Yu Gothic Medium", sans-serif !default;
 
-$font-serif:
-"Hiragino Mincho ProN",
-"Noto Serif Japanese",
-"Yu Mincho", YuMincho,
-serif !default;
+$font-serif: "Hiragino Mincho ProN", "Noto Serif Japanese", "Yu Mincho",
+  YuMincho, serif !default;
 
-$font-mono:
-Menlo, Monaco, Consolas,
-"Liberation Mono", "Courier New",
-Meiryo,
-monospace, serif !default;
+$font-mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", Meiryo,
+  monospace, serif !default;
+
+//----------------------------------------------------
+// / Font Size
+//----------------------------------------------------
+
+$font-size-xxl: 200% !default;
+$font-size-xl: 150% !default;
+$font-size-lg: 125% !default;
+$font-size-md: 100% !default;
+$font-size-sm: 87.5% !default;
+$font-size-xs: 75% !default;
+$font-size-xxs: 62.5% !default;
 
 //----------------------------------------------------
 // / Font Size - Pattern
 //----------------------------------------------------
 
-$pattern-font-size:(
-  xxl: 200%,
-  xl: 150%,
-  lg: 125%,
-  md: 100%,
-  sm: 87.5%,
-  xs: 75%,
-  xxs: 62.5%
+$pattern-font-size: (
+  xxl: $font-size-xxl,
+  xl: $font-size-xl,
+  lg: $font-size-lg,
+  md: $font-size-md,
+  sm: $font-size-sm,
+  xs: $font-size-xs,
+  xxs: $font-size-xxs
 ) !default;
+
+//----------------------------------------------------
+// / Font Weight
+//----------------------------------------------------
+
+$font-weight-normal: 400 !default;
+$font-weight-strong: 700 !default;
+$font-weight-100: 100 !default;
+$font-weight-200: 200 !default;
+$font-weight-300: 300 !default;
+$font-weight-400: 400 !default;
+$font-weight-500: 500 !default;
+$font-weight-600: 600 !default;
+$font-weight-700: 700 !default;
+$font-weight-800: 800 !default;
+$font-weight-900: 900 !default;
 
 //----------------------------------------------------
 // / Font Weight - Pattern
 //----------------------------------------------------
 
-$pattern-font-weight:(
-  normal: 400,
-  strong: 700,
-  weight-100: 100,
-  weight-200: 200,
-  weight-300: 300,
-  weight-400: 400,
-  weight-500: 500,
-  weight-600: 600,
-  weight-700: 700,
-  weight-800: 800,
-  weight-900: 900
+$pattern-font-weight: (
+  normal: $font-weight-normal,
+  strong: $font-weight-strong,
+  weight-100: $font-weight-100,
+  weight-200: $font-weight-200,
+  weight-300: $font-weight-300,
+  weight-400: $font-weight-400,
+  weight-500: $font-weight-500,
+  weight-600: $font-weight-600,
+  weight-700: $font-weight-700,
+  weight-800: $font-weight-800,
+  weight-900: $font-weight-900
 ) !default;
