--- a/src/scss/variable/_color.scss
+++ b/src/scss/variable/_color.scss
@@ -287,32 +287,32 @@ $white: #ffffff !default;
 //----------------------------------------------------
 
 $dark: $black !default;
-$dark-1: rgba( $black, 0.87 ) !default;
-$dark-2: rgba( $black, 0.7 ) !default;
-$dark-3: rgba( $black, 0.6 ) !default;
-$dark-4: rgba( $black, 0.5 ) !default;
-$dark-5: rgba( $black, 0.4 ) !default;
-$dark-6: rgba( $black, 0.26 ) !default;
-$dark-7: rgba( $black, 0.15 ) !default;
-$dark-8: rgba( $black, 0.12 ) !default;
-$dark-9: rgba( $black, 0.05 ) !default;
+$dark-1: rgba($black, 0.87) !default;
+$dark-2: rgba($black, 0.7) !default;
+$dark-3: rgba($black, 0.6) !default;
+$dark-4: rgba($black, 0.5) !default;
+$dark-5: rgba($black, 0.4) !default;
+$dark-6: rgba($black, 0.26) !default;
+$dark-7: rgba($black, 0.15) !default;
+$dark-8: rgba($black, 0.12) !default;
+$dark-9: rgba($black, 0.05) !default;
 
 $light: $white !default;
-$light-1: rgba( $white, 0.87 ) !default;
-$light-2: rgba( $white, 0.7 ) !default;
-$light-3: rgba( $white, 0.6 ) !default;
-$light-4: rgba( $white, 0.5 ) !default;
-$light-5: rgba( $white, 0.4 ) !default;
-$light-6: rgba( $white, 0.26 ) !default;
-$light-7: rgba( $white, 0.15 ) !default;
-$light-8: rgba( $white, 0.12 ) !default;
-$light-9: rgba( $white, 0.05 ) !default;
+$light-1: rgba($white, 0.87) !default;
+$light-2: rgba($white, 0.7) !default;
+$light-3: rgba($white, 0.6) !default;
+$light-4: rgba($white, 0.5) !default;
+$light-5: rgba($white, 0.4) !default;
+$light-6: rgba($white, 0.26) !default;
+$light-7: rgba($white, 0.15) !default;
+$light-8: rgba($white, 0.12) !default;
+$light-9: rgba($white, 0.05) !default;
 
 //----------------------------------------------------
 // / Dark & Light - Pattern
 //----------------------------------------------------
 
-$pattern-color-dark:(
+$pattern-color-dark: (
   dark: $dark,
   dark-1: $dark-1,
   dark-2: $dark-2,
@@ -325,7 +325,7 @@ $pattern-color-dark:(
   dark-9: $dark-9
 ) !default;
 
-$pattern-color-light:(
+$pattern-color-light: (
   light: $light,
   light-1: $light-1,
   light-2: $light-2,
@@ -339,34 +339,12 @@ $pattern-color-light:(
 ) !default;
 
 //----------------------------------------------------
-// / Theme
-//----------------------------------------------------
-
-$primary: $cyan-500 !default;
-$info: $blue-500 !default;
-$success: $green-a700 !default;
-$warning: $orange-600 !default;
-$danger: $red-500 !default;
-
-//----------------------------------------------------
-// / Theme - Pattern
-//----------------------------------------------------
-
-$pattern-color-theme:(
-  primary: $primary,
-  info: $info,
-  success: $success,
-  warning: $warning,
-  danger: $danger
-) !default;
-
-//----------------------------------------------------
 // / Brand
 //----------------------------------------------------
 
 $brand-twitter: #1da1f2 !default;
 $brand-facebook: #3b5998 !default;
-$brand-hatena: #45A3D9 !default;
+$brand-hatena: #45a3d9 !default;
 $brand-line: #00c300 !default;
 $brand-pocket: #ef4056 !default;
 
@@ -374,7 +352,7 @@ $brand-pocket: #ef4056 !default;
 // / Brand - Pattern
 //----------------------------------------------------
 
-$pattern-color-social:(
+$pattern-color-social: (
   twitter: $brand-twitter,
   facebook: $brand-facebook,
   hatena: $brand-hatena,
