--- a/src/scss/mixin/_mediaquery.scss
+++ b/src/scss/mixin/_mediaquery.scss
@@ -156,11 +156,23 @@
 }
 
 //----------------------------------------------------
-// / Dark Mode
+// / Color Scheme
 //----------------------------------------------------
+
+@mixin light {
+  @media (prefers-color-scheme: light) {
+    @content;
+  }
+}
 
 @mixin dark {
   @media (prefers-color-scheme: dark) {
+    @content;
+  }
+}
+
+@mixin dark-class {
+  .darkmode {
     @content;
   }
 }
