--- a/src/scss/mixin/_mediaquery.scss
+++ b/src/scss/mixin/_mediaquery.scss
@@ -171,13 +171,13 @@
   }
 }
 
-@mixin data-light {
+@mixin data-theme-light {
   [data-theme="light"] {
     @content;
   }
 }
 
-@mixin data-dark {
+@mixin data-theme-dark {
   [data-theme="dark"] {
     @content;
   }
