Return theme color #2

--- a/src/scss/variable/_color.scss
+++ b/src/scss/variable/_color.scss
@@ -339,6 +339,28 @@ $pattern-color-light: (
 ) !default;
 
 //----------------------------------------------------
+// / Theme
+//----------------------------------------------------
+
+$primary: $cyan-500 !default;
+$info: $blue-500 !default;
+$success: $green-a700 !default;
+$warning: $orange-600 !default;
+$danger: $red-500 !default;
+
+//----------------------------------------------------
+// / Theme - Pattern
+//----------------------------------------------------
+
+$pattern-color-theme: (
+  primary: $primary,
+  info: $info,
+  success: $success,
+  warning: $warning,
+  danger: $danger
+) !default;
+
+//----------------------------------------------------
 // / Brand
 //----------------------------------------------------
 
